--- a/Airbnb_linear_model.ipynb
+++ b/Airbnb_linear_model.ipynb
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From C:\\Users\\UPINAJO\\AppData\\Local\\anaconda3\\envs\\rbnb\\Lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+      "WARNING:tensorflow:From c:\\Users\\UPINAJO\\AppData\\Local\\anaconda3\\envs\\rbnb\\Lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
       "\n",
       "2.15.0\n"
      ]
@@ -172,7 +172,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x26f52425410>"
+       "<matplotlib.legend.Legend at 0x18d55dd8e50>"
       ]
      },
      "execution_count": 6,
@@ -225,7 +225,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
