--- a/multi-layer-ann-0.ipynb
+++ b/multi-layer-ann-0.ipynb
@@ -27,7 +27,7 @@
     "import pandas as pd # conda install pandas\n",
     "import warnings\n",
     "import seaborn as sns # conda install seaborn - Python data visualization library based on matplotlib\n",
-    "import pandas as pd \n",
+    "import numpy as np \n",
     "\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
@@ -368,7 +368,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
