--- a/multi-layer-ann-1-optimized.ipynb
+++ b/multi-layer-ann-1-optimized.ipynb
@@ -18,16 +18,15 @@
    "outputs": [],
    "source": [
     "# \n",
-    "# MULTI LAYER PERCEPTRON - ARTIFICIAL NEURAL NETWORK\n",
-    "# \n",
+    "# MULTI LAYER PERCEPTRON - ARTIFICIAL NEURAL NETWORK - OPTIMIZED NETWORK\n",
+    "#  \n",
     "\n",
-    "# import numpy as np # conda install numpy\n",
+    "import numpy as np # conda install numpy\n",
     "import tensorflow as tf\n",
     "import matplotlib.pyplot as plt # conda install matplotlib\n",
     "import pandas as pd # conda install pandas\n",
     "import warnings\n",
     "import seaborn as sns # conda install seaborn - Python data visualization library based on matplotlib\n",
-    "import numpy as np \n",
     "\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
@@ -275,12 +274,21 @@
     "# models.Sequential() indicates that every layer we add goes in sequential order, one after another\n",
     "# A model grouping layers into an object with training/inference features.\n",
     "# Sequential groups a linear stack of layers into a tf.keras.Model\n",
-    "# Dense(units) implements the operation: output = activation(dot(input, kernel) + bias) where activation\n",
-    "# is the element-wise activation function passed as the activation argument, kernel is a weights\n",
+    "\n",
+    "# Dense(units) implements the operation: output = activation(dot(input, kernel) + bias) where \n",
+    "# activation is the element-wise activation function passed as the activation argument, kernel is a weights\n",
     "# matrix created by the layer, and bias is a bias vector created by the layer (only applicable if \n",
     "# use_bias is True). These are all attributes of Dense. units - Positive integer, dimensionality of the output space.\n",
+    "\n",
     "model = tf.keras.models.Sequential([\n",
-    "    tf.keras.layers.Dense(128), # 1st layer - Dense() Just your regular densely-connected NN layer - 128 dimensions of output space\n",
+    "    # 1st layer - Dense() Just your regular densely-connected NN layer - 128 dimensions of output space\n",
+    "    # Activation function to use. If you don't specify anything, no activation is applied (ie. \"linear\" activation: a(x) = x).\n",
+    "    # relu - rectified linear unit activation function. With default values, this returns the standard ReLU \n",
+    "    # activation: max(x, 0), the element-wise maximum of 0 and the input tensor.\n",
+    "    tf.keras.layers.Dense(128, activation='relu'), \n",
+    "    # The Dropout layer randomly sets input units to 0 with a frequency of rate at each step during training time, \n",
+    "    # which helps prevent overfitting. Inputs not set to 0 are scaled up by 1/(1 - rate) such that the sum over all inputs is unchanged.\n",
+    "    tf.keras.layers.Dropout(0.2), # Dropout 20% of the input\n",
     "    tf.keras.layers.Dense(1)    # 2nd layer - Dense() Just your regular densely-connected NN layer - 1 dimension of output space\n",
     "])\n"
    ]
@@ -293,15 +301,16 @@
    "outputs": [],
    "source": [
     "# the keras.optimizer is the equivalent of the train_step() function of the linear model\n",
-    "# SGD is the Stochastic Gradient Descent algorithm - Gradient descent (with momentum) optimizer.\n",
-    "sgd_optimizer = tf.keras.optimizers.SGD()\n",
+    "# Adam optimization is a stochastic gradient descent method that is based on adaptive estimation of first-order and second-order moments.\n",
+    "# USE THIS OPTION BY DEFAULT AND NOT CHANGE IT UNLESS YOU KNOW WHAT YOU ARE DOING\n",
+    "adam_optimizer = tf.keras.optimizers.Adam()\n",
     "# \n",
     "loss_fn = tf.keras.losses.MAE   # uses the Mean Absolute Error \n",
     "\n",
     "# The compile() method: specifying a loss, metrics, and an optimizer\n",
     "# To train a model with fit(), you need to specify a loss function, an optimizer, and optionally, some metrics to monitor.\n",
     "model.compile(\n",
-    "    optimizer=sgd_optimizer, \n",
+    "    optimizer=adam_optimizer, \n",
     "    loss=loss_fn,\n",
     "    metrics=[tf.keras.metrics.MAE]\n",
     ")"
